working archive feature frontend changes

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -71,6 +71,7 @@
   "home-global.assignment-weight.text": "WEIGHT (%)",
   "home.experiment.text.subtitle": "Create and analyze experiments",
   "home.no-experiment.text": "Welcome! <br> Let's start by creating a new experiment!",
+  "home.experiment.export-all-experiments.text": "EXPORT ALL",
   "home.experiment.add-experiment.text": "ADD EXPERIMENT",
   "home.experiment.import-experiment.text": "IMPORT EXPERIMENT",
   "home.experiment-query-result.title.text": "Metrics Data",
@@ -267,6 +268,8 @@
   "home.change-experiment-status.enrolling-info.text": "*Once the experiment is started you won’t be allowed to update Experiment’s Condition and Sites",
   "home.change-experiment-status.enrolling-error.text": "*Experiment start date should not be greater than experiment end date {{ endDate }}",
   "home.change-experiment-status.condition-count-error.text": "*Please have at least 2 conditions to move forward",
+  "home.change-experiment-status.archiving-confirmation.text": "Please acknowledge that you agree to permanently transition this experiment to archive status",
+  "home.change-experiment-status.archiving-info.text": "*Archiving the experiment will cancel the post rule. The archived experiments are hidden from the experiment list and can be found by explicitly searching for 'Archived' experiments.",
   "home.change-post-experiment-rule.title.text": "Change Post Experiment Condition",
   "logs-global.log-zero-state.text": "No Logs",
   "logs-global.log-view-diff.text": "view",
