stratification tab, table and import csv button and dialog box with cancel fuctionality done

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -296,6 +296,7 @@
   "users.table.id.text": "ID",
   "users.experiment-users-title.text": "Experiment Participants",
   "users.preview-users-title.text": "Preview Participants",
+  "users.stratification.text": "Stratifications",
   "users.no-preview-users.text": "No Preview Participants",
   "users.create-preview-users-title.text": "Create Preview Participants",
   "users.preview-users.add-user-btn.text": "ADD PARTICIPANT",
@@ -305,6 +306,8 @@
   "users.preview-users.table-total-assigned-condition-heading.text": "Total Assigned Conditions",
   "users.preview-users.add-new-experiment.text": "+ Add New Experiment",
   "users.preview-users.save.text": "SAVE",
+  "users.stratification-users-title.text": "Stratifications",
+  "users.stratification-users-import-csv.text": "Import CSV",
   "profile.global.email.text": "Email",
   "profile.global.role.text": "Role",
   "profile.heading.text": "Profile",
@@ -394,6 +397,11 @@
   "segments.segment-experiment-list-context.text": "Context",
   "segments.segment-experiment-list-usedList.text": "Used List",
   "segments.segment-experiment-list-zeroState.text": "No Data",
+  "stratifications.global-members-factor.text": "FACTOR",
+  "stratifications.global-members-summary.text": "SUMMARY",
+  "stratifications.import-stratification.text": "Import Stratification(s)",
+  "stratifications.import-stratification.message.text": "Select the CSV file(s) to Import Stratification.",
+  "stratifications.import-stratification.error.message.text": "Invalid Stratification CSV data",
   "metrics.subtitle.text": "Manage metrics here",
   "metric.delete-metric.message.text": "Type the metric path separated by space to confirm deletion:",
   "metric.delete-metric.input-placeholder.text": "Metric path",
