--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -260,6 +260,8 @@
   "home.view-experiment.mattab.metrics.text": "Metrics",
   "home.import-experiment.message.text": "Select the JSON to import experiment:",
   "home.import-experiment.error.message.text": "Invalid Experiment JSON data",
+  "home.import-experiment.stratification-factor-error.message.text": "Missing Stratification Factor in Experiment JSON data",
+  "home.import-experiment.invalid-stratification-factor-error.message.text": "Import Stratification Factor from Participants Menu > Stratification before using it",
   "home.import-experiment.old-version-error.message.text": "Warning: this experiment file is incompatible(older) with the current version of UpGrade. Some features may not import or function as intended. Continue with import?",
   "home.import-experiment.new-version-error.message.text": "Warning: this experiment file is incompatible(newer) with the current version of UpGrade. Some features may not import or function as intended. Continue with import?",
   "home.import-experiment.missing-properties.message.text": "The document is missing the following properties: ",
