Stratification Factor Feature (#989)
* stratification tab, table and import csv button and dialog box with cancel fuctionality done

* stratification factor delete pop up and import popup fix

* added stratification backend model changes

* stratification drop down in experiment overview

* Added experiment-stratification connections

* added stratification validator

* creating stratificationFactor when not found

* solve updating experiment issue

* added userStratificationRepo

* stratification drop down and summary format in table

* fetch stratification factor store

* resolved store issue for stratification table fetch

* Updated stratification controller APIs

* delete factors from view feature

* completed all stratification controller and service

* export factor store actions

* solve csv download related errors

* fetch, delete and download stratification factors functionality

* upload strata csv feature

* solve stratificationFactor creating multiple doc

* solve empty string as factorValue error

* fixing frontend test cases

* fixing backend test cases

* solved srs bugs

* page refresh on importing strata factor

* solve experiment creation bug

* import, export SRS experiment and setting random assign algo as default

* adding stratification details and experiment design type on details page

* added stratificationAlgorithm for assignment

* fixed backend unit and integration test cases

* refresh strata factor on import and delete, error not selecting factor in overview, select single file in import

* removed N/A data & removed id from stratificationFactor

* make assignmentAlogrithm optional

* N/A and factorId removing model changes, error on importing experiment with factor which don't exist

* backend integration test cases for stratification

* change stratificationFactorName name as FK in db

* added swagger for stratification

* solve empty csv upload error

* updat

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -63,6 +63,8 @@
   "home-global.consistency-rule.text": "Consistency Rule",
   "home-global.condition-order.text": "Condition Order",
   "home-global.design-type.text": "Design Type",
+  "home-global.assignment-algorithm.text": "Assignment Algorithm",
+  "home-global.stratification-factor.text": "Stratification Factor",
   "home-global.inclusion-criteria.text": "Inclusion Criteria",
   "home-global.post-experiment-rule.text": "Post Rule",
   "home-global.post-experiment-rule.default.text": "default",
@@ -116,6 +118,8 @@
   "home.new-experiment.overview.custom-group-name.error.text": "Please enter custom group name",
   "home.new-experiment.overview.consistency-rule.error.text": "Please choose consistency rule",
   "home.new-experiment.overview.context.error.text": "Please enter at least one context",
+  "home.new-experiment.overview.stratification-factor.error.text": "Please select stratification factor",
+  "home.new-experiment.overview.no-stratification-factor.error.text": "Please import the stratification factor you require from Participants Menu > Stratification Tab",
   "home.new-experiment.design.design-type.label": "Design Type",
   "home.new-experiment.design.decision-point.inital.include-message": "Experiments require at least one decision point",
   "home.new-experiment.design.factors.inital.include-message": "Factorial experiments require factors",
@@ -257,6 +261,8 @@
   "home.view-experiment.mattab.metrics.text": "Metrics",
   "home.import-experiment.message.text": "Select the JSON to import experiment:",
   "home.import-experiment.error.message.text": "Invalid Experiment JSON data",
+  "home.import-experiment.stratification-factor-error.message.text": "Missing Stratification Factor in Experiment JSON data",
+  "home.import-experiment.invalid-stratification-factor-error.message.text": "Import Stratification Factor from Participants Menu > Stratification before using it",
   "home.import-experiment.old-version-error.message.text": "Warning: this experiment file is incompatible(older) with the current version of UpGrade. Some features may not import or function as intended. Continue with import?",
   "home.import-experiment.new-version-error.message.text": "Warning: this experiment file is incompatible(newer) with the current version of UpGrade. Some features may not import or function as intended. Continue with import?",
   "home.import-experiment.missing-properties.message.text": "The document is missing the following properties: ",
@@ -299,6 +305,7 @@
   "users.table.id.text": "ID",
   "users.experiment-users-title.text": "Experiment Participants",
   "users.preview-users-title.text": "Preview Participants",
+  "users.stratification.text": "Stratifications",
   "users.no-preview-users.text": "No Preview Participants",
   "users.create-preview-users-title.text": "Create Preview Participants",
   "users.preview-users.add-user-btn.text": "ADD PARTICIPANT",
@@ -308,6 +315,8 @@
   "users.preview-users.table-total-assigned-condition-heading.text": "Total Assigned Conditions",
   "users.preview-users.add-new-experiment.text": "+ Add New Experiment",
   "users.preview-users.save.text": "SAVE",
+  "users.stratification-users-title.text": "Stratifications",
+  "users.stratification-users-import-csv.text": "Import CSV",
   "profile.global.email.text": "Email",
   "profile.global.role.text": "Role",
   "profile.heading.text": "Profile",
@@ -397,6 +406,15 @@
   "segments.segment-experiment-list-context.text": "Context",
   "segments.segment-experiment-list-usedList.text": "Used List",
   "segments.segment-experiment-list-zeroState.text": "No Data",
+  "stratifications.global-members-factor.text": "FACTOR",
+  "stratifications.global-members-summary.text": "SUMMARY",
+  "stratifications.global-members-status.text": "STATUS",
+  "stratifications.global-members-status-tooltip.text": "Stratification factor is used/unsed in any experiment",
+  "stratifications.import-stratification.text": "Import Stratification(s)",
+  "stratifications.import-stratification.message.text": "Select the CSV file(s) to Import Stratification.",
+  "stratifications.import-stratification.error.message.text": "Invalid Stratification CSV data",
+  "stratifications.delete-stratification.text": "Delete Stratification",
+  "stratifications.delete-stratification.message.text": "Are you sure you want to delete the Stratification",
   "metrics.subtitle.text": "Manage metrics here",
   "metric.delete-metric.message.text": "Type the metric path separated by space to confirm deletion:",
   "metric.delete-metric.input-placeholder.text": "Metric path",
