export csv dialog box and store changes

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -382,6 +382,9 @@
   "segments.duplicate-segment.segmentName-input-placeholder.text": "Name of the duplicate segment",
   "segments.duplicate-segment.segmentDescription-input-placeholder.text": "Description of the duplicate segment",
   "segments.duplicate-segment-duplicate.text": "duplicate",
+  "segments.overview.export-segment.text": "Export Segment",
+  "segments.overview.export-warning.text": "The segment data will be sent to '{{ email }}'.",
+  "segments.overview.export-csv-warning.text": "CSV export of multiple segment is not allowed.",
   "segments.overview.segment-description.text": "Description",
   "segments.overview.segment-app-context.text": "App Context",
   "segments.members-add-members.text": "Add Member",
