moved members csv import in members tab

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -393,8 +393,10 @@
   "segments.global-members-id/name.text": "ID/NAME",
   "segments.global-members-id.text": "ID",
   "segments.new-segment-members-stepper.text": "Members",
+  "segments.new-segment-members-stepper.error-message.text": "Please enter the valid values in members table",
   "segments.new-segment-done.text": "done",
   "segments.new-segment-overview-stepper.text": "Overview",
+  "segments.new-segment-overview-stepper.segment-name-error.text": "Segment name already exists for selected context. Please enter a unique segment name",
   "segments.view-segment.members-subtitle.text": "Member(s)",
   "segments.global-members.segments-count-members-error.text": "Please have at least 1 valid member to move forward",
   "segments.import-segment.text": "IMPORT SEGMENT",
