--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -111,7 +111,7 @@
   "home.new-experiment.overview.name.placeHolder": "Name",
   "home.new-experiment.overview.description.placeHolder": "Description (optional)",
   "home.new-experiment.overview.group-type.placeHolder": "Group Type",
-  "home.new-experiment.overview.context.placeHolder": "Context (optional)",
+  "home.new-experiment.overview.app-context.placeHolder": "App Context",
   "home.new-experiment.overview.tags.placeHolder": "Tags (optional)",
   "home.new-experiment.overview.unit-of-assignment.error.text": "Please choose unit of assignment",
   "home.new-experiment.overview.group-type.error.text": "Please choose group type",
@@ -222,7 +222,7 @@
   "home.view-experiment.export-experiment.text": "Export Experiment",
   "home.view-experiment.export-method.text": "Export Type",
   "home.view-experiment.export-warning.text": "The experiment data will be sent to '{{ email }}'.",
-  "home.view-experiment.export-csv-warning.text": "CSV export of multiple experiment is not allowed.",
+  "home.view-experiment.export-csv-warning.text": "*CSV export of multiple experiments is not allowed.",
   "home.view-experiment.created-on.text": "CREATED ON: ",
   "home.view-experiment.last-updated-on.text": "LAST UPDATED ON: ",
   "home.view-experiment.ending-criteria.text": "ENDING CRITERIA",
