--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -18,6 +18,8 @@
   "global.delete-confirmation.message.text": "Type 'delete' to confirm deletion:",
   "global.duplicate.text": "DUPLICATE",
   "global.save-confirmation.message.text": "Experiment changes are updated successfully!",
+  "global.import-experiments.message.text": "Experiment/s imported successfully.",
+  "global.delete-experiments.message.text": "Experiments deleted successfully.",
   "global.import-segments.message.text": "Import Segments and add them in the imported experiment if required!",
   "global.delete-input-comparison.text": "delete",
   "global.delete.input-placeholder.text": "Type delete",
