Add the new info message for login

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -54,9 +54,7 @@
   "app-header.title.view-feature-flag": "View Feature Flag",
   "app-header.title.view-segment": "View Segment",
   "login.sign-in-btn.text": "Login with Google",
-  "login.description-1.text": "By creating this account, you agree to",
-  "login.description-2.text": "Terms & Conditions",
-  "login.description-3.text": "of UpGrade",
+  "login.info.text": "To learn more about UpGrade, please visit",
   "home-global.sign-out.text": "Sign Out",
   "home-global.status.text": "STATUS",
   "home-global.unit-of-assignment.text": "Unit of Assignment",
