Add Common Page Styles

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -342,7 +342,7 @@
   "feature-flags.global-active-variation.text": "Active Variation",
   "feature-flags.global-variation-value.text": "Value",
   "feature-flags.title.text": "Feature Flags",
-  "feature-flags.subtitle.text": "Manage feature flags",
+  "feature-flags.subtitle.text": "Create and manage feature flags",
   "feature-flags.link.text": "featureflags",
   "feature-flags.no-flags.text": "Welcome! <br> Let's start by creating a new flag!",
   "feature-flags.delete-flag.message.text": "Type the name of feature flag to confirm deletion:",
