--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -337,8 +337,12 @@
   "profile.action.authorization.text": "Authorization",
   "profile.action.filter-metric.text": "Filter Metric",
   "feature-flags.global-name.text": "Name",
-  "feature-flags.global-key.text": "Key",
   "feature-flags.global-status.text": "Status",
+  "feature-flags.global-updated-at.text": "Updated At",
+  "feature-flags.global-app-context.text": "App Context",
+  "feature-flags.global-tags.text": "Tags",
+  "feature-flags.global-exposures.text": "Exposures",
+  "feature-flags.global-key.text": "Key",
   "feature-flags.global-active-variation.text": "Active Variation",
   "feature-flags.global-variation-value.text": "Value",
   "feature-flags.title.text": "Feature Flags",
