add both include and exclude headers with common header tableRowCount added also

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -356,6 +356,10 @@
   "feature-flags.add-flag-modal.name-hint.text": "The name for this feature flag.",
   "feature-flags.add-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
   "feature-flags.add-flag-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
+  "feature-flags.details.inclusions.card.title.text": "Include Lists",
+  "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag",
+  "feature-flags.details.exclusions.card.title.text": "Exclude Lists",
+  "feature-flags.details.exclusions.card.subtitle.text": "Define Exclude lists for this feature flag",
   "feature-flags.table-variation-type.text": "Variation type",
   "feature-flags.overview.flag-variation-type.text": "Flag Variation Type",
   "feature-flags.overview.flag-variation-type-error.text": "Please choose a flag variation type",
