--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -356,6 +356,7 @@
   "feature-flags.add-flag-modal.name-hint.text": "The name for this feature flag.",
   "feature-flags.add-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
   "feature-flags.add-flag-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
+  "feature-flags.delete-modal.warning-message.text": "Are you sure you want to delete ",
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
   "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag",
   "feature-flags.details.add-include-list.button.text": "Add Include List",
