wip-working-include-and-exclude-try-refactor

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -357,9 +357,11 @@
   "feature-flags.add-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
   "feature-flags.add-flag-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
   "feature-flags.delete-modal.warning-message.text": "Are you sure you want to delete ",
+  "feature-flags.details.inclusions.card.no-data-row.text": "No Include Lists defined. The feature flag will not be applied to any participants.",
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
   "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag",
   "feature-flags.details.add-include-list.button.text": "Add Include List",
+  "feature-flags.details.exclusions.card.no-data-row.text": "No Exclude Lists defined.",
   "feature-flags.details.exclusions.card.title.text": "Exclude Lists",
   "feature-flags.details.exclusions.card.subtitle.text": "Define Exclude lists for this feature flag",
   "feature-flags.details.add-exclude-list.button.text": "Add Exclude List",
