--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
   "global.no-metrics.text": "No Metrics",
   "global.queries-tabs.text": "Queries",
   "global.monitor.text": "Monitor",
+  "global.add-button.text": "Add",
   "global.no-monitored-metrics-tabs.text": "No Monitored Metrics",
   "global.group-type-singular.text": "Group ({{groupType}})",
   "global.group-type-plural.text": "Groups ({{groupType}})",
@@ -362,13 +363,11 @@
   "feature-flags.details.inclusions.card.no-data-row.text": "No Include Lists defined. The feature flag will not be applied to any participants.",
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
   "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag",
-  "feature-flags.details.add-include-list.button.text": "Add Include List",
   "feature-flags.details.exclusions.card.no-data-row.text": "No Exclude Lists defined.",
   "feature-flags.details.exclusions.card.title.text": "Exclude Lists",
   "feature-flags.details.exclusions.card.subtitle.text": "Define Exclude lists for this feature flag",
   "feature-flags.details.exposures.card.title.text": "Exposures",
   "feature-flags.details.exposures.card.subtitle.text": "View total exposures for the feature flag during the specific period.",
-  "feature-flags.details.add-exclude-list.button.text": "Add Exclude List",
   "feature-flags.table-variation-type.text": "Variation type",
   "feature-flags.overview.flag-variation-type.text": "Flag Variation Type",
   "feature-flags.overview.flag-variation-type-error.text": "Please choose a flag variation type",
