--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -354,10 +354,10 @@
   "feature-flags.no-flags-in-table.text": "No feature flags is defined. Create a new feature flag.",
   "feature-flags.delete-flag.message.text": "Type the name of feature flag to confirm deletion:",
   "feature-flags.delete-flag.input-placeholder.text": "Feature flag name",
-  "feature-flags.add-flag.text": "ADD FLAG",
-  "feature-flags.add-flag-modal.name-hint.text": "The name for this feature flag.",
-  "feature-flags.add-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
-  "feature-flags.add-flag-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
+  "feature-flags.upsert-flag.text": "ADD FLAG",
+  "feature-flags.upsert-flag-modal.name-hint.text": "The name for this feature flag.",
+  "feature-flags.upsert-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
+  "feature-flags.upsert-flag-modal.app-context-hint.text": "The App Context indicates where the feature flag will run, known to UpGrade.",
   "feature-flags.delete-modal.warning-message.text": "Are you sure you want to delete ",
   "feature-flags.details.inclusions.card.no-data-row.text": "No Include Lists defined. The feature flag will not be applied to any participants.",
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
