Feature Flag export JSON and CSV modals with crud changes on frontend side

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -389,7 +389,12 @@
   "feature-flags.add-feature-flag.text": "Add Feature Flag",
   "feature-flags.import-feature-flag.text": "Import Feature Flag",
   "feature-flags.import-feature-flag.message.text": "The Feature Flag JSON file should include the required properties for it to be imported",
-  "feature-flags.export-all-feature-flags.text": "Export All Feature Flags",
+  "feature-flags.export-all-feature-flags.text": "Export All Feature Flag Designs",
+  "feature-flags.export-feature-flag-design.text": "Export Feature Flag Design",
+  "feature-flags.export-feature-flags-data.text": "Email Feature Flag Data",
+  "feature-flags.export-all-feature-flags.confirmation-text.text": "Are you sure you want to export all feature flags design (JSON)?",
+  "feature-flags.export-feature-flag-design.confirmation-text.text": "Are you sure you want to export the feature flags design (JSON)?",
+  "feature-flags.export-feature-flags-data.confirmation-text.text": "Are you sure you want to email the feature flags data (CSV)?",
   "segments.title.text": "Segments",
   "segments.subtitle.text": "Define new segments to include or exclude from any experiment",
   "segments.no-segments.text": "Welcome! <br> Let's start by creating a new segment!",
