Update Page Styles to Match Figma Design

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -338,9 +338,11 @@
   "profile.new-user.add-btn.text": "ADD",
   "profile.action.authorization.text": "Authorization",
   "profile.action.filter-metric.text": "Filter Metric",
+  "feature-flags.details-created-on.text": "Created on: ",
+  "feature-flags.details-updated-at.text": "Updated at: ",
   "feature-flags.global-name.text": "Name",
   "feature-flags.global-status.text": "Status",
-  "feature-flags.global-updated-at.text": "Updated At",
+  "feature-flags.global-updated-at.text": "Updated at",
   "feature-flags.global-app-context.text": "App Context",
   "feature-flags.global-tags.text": "Tags",
   "feature-flags.global-exposures.text": "Exposures",
@@ -362,7 +364,7 @@
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
   "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag",
   "feature-flags.details.add-include-list.button.text": "Add Include List",
-  "feature-flags.details.exclusions.card.no-data-row.text": "No Exclude Lists defined.",
+  "feature-flags.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
   "feature-flags.details.exclusions.card.title.text": "Exclude Lists",
   "feature-flags.details.exclusions.card.subtitle.text": "Define Exclude lists for this feature flag",
   "feature-flags.details.exposures.card.title.text": "Exposures",
