--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -389,6 +389,7 @@
   "feature-flags.import-feature-flag.text": "Import Feature Flag",
   "feature-flags.import-feature-flag.message.text": "The Feature Flag JSON file should include the required properties for it to be imported.",
   "feature-flags.export-all-feature-flags.text": "Export All Feature Flags",
+  "feature-flags.duplicate-key-error-text": "Feature flag with this key already exists for this app-context.",
   "segments.title.text": "Segments",
   "segments.subtitle.text": "Define new segments to include or exclude from any experiment",
   "segments.no-segments.text": "Welcome! <br> Let's start by creating a new segment!",
