Implement Import/Export button for the Values field

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -398,6 +398,12 @@
   "feature-flags.export-feature-flag-design.confirmation-text.text": "Are you sure you want to export the feature flags design (JSON)?",
   "feature-flags.export-feature-flags-data.confirmation-text.text": "Are you sure you want to email the feature flags data (CSV)?",
   "feature-flags.upsert-private-segment-list-modal": "Please select an available segment from the dropdown.",
+  "feature-flags.upsert-list-modal.tags-label.text": "Tags (optional)",
+  "feature-flags.upsert-list-modal.values-label.text": "Values",
+  "feature-flags.upsert-list-modal.tags-placeholder.text": "Tags separated by commas",
+  "feature-flags.upsert-list-modal.values-placeholder.text": "Values separated by commas",
+  "feature-flags.upsert-list-modal.import-csv.message.text": "CSVs should be properly formatted and include one column of IDs with no headers.",
+  "feature-flags.upsert-list-modal.import-csv.error.message.text": "Import failed. Please check your file and try again.",
   "segments.title.text": "Segments",
   "segments.subtitle.text": "Define new segments to include or exclude from any experiment",
   "segments.no-segments.text": "Welcome! <br> Let's start by creating a new segment!",
