--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -355,6 +355,7 @@
   "feature-flags.link.text": "featureflags",
   "feature-flags.no-flags.text": "Welcome! <br> Let's start by creating a new flag!",
   "feature-flags.no-flags-in-table.text": "No feature flags is defined. Create a new feature flag.",
+  "feature-flags.no-matching-flags.text": "No matching feature flags found.",
   "feature-flags.delete-flag.message.text": "Type the name of feature flag to confirm deletion:",
   "feature-flags.delete-flag.input-placeholder.text": "Feature flag name",
   "feature-flags.upsert-flag-modal.name-hint.text": "The name for this feature flag.",
