bugfix-> spinner align to center

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -37,7 +37,7 @@
   "global.context.text": "CONTEXT",
   "global.app-context.text": "App Context",
   "global.tags.text": "TAGS",
-  "global.search.text": "Search...",
+  "global.search.text": "Search",
   "global.metrics.text": "Metrics",
   "global.no-metrics.text": "No Metrics",
   "global.queries-tabs.text": "Queries",
