--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -462,10 +462,10 @@
   "segments.import-segment.text": "IMPORT SEGMENT",
   "segments.import-segment.message.text": "Select the JSON file(s) to import segments:",
   "segments.import-segment.error.message.text": "Invalid Segment JSON data",
-  "segments.segment-experiment-list-title.text": "Experiments using '{{ segmentName }}' ",
+  "segments.segment-experiment-list-title.text": "Used by ({{ numberOfUses }}) ",
   "segments.segment-experiment-list-name.text": "Name",
-  "segments.segment-experiment-list-state.text": "State",
-  "segments.segment-experiment-list-context.text": "Context",
+  "segments.segment-experiment-list-state.text": "Status",
+  "segments.segment-experiment-list-type.text": "Type",
   "segments.segment-experiment-list-usedList.text": "Used List",
   "segments.segment-experiment-list-zeroState.text": "No Data",
   "stratifications.global-members-factor.text": "FACTOR",
