--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -371,6 +371,8 @@
   "feature-flags.delete-flag.input-placeholder.text": "Feature flag name",
   "feature-flags.import-flag-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the feature flag. Please ensure it is the correct file.",
   "feature-flags.import-flag-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the feature flag details post-import.",
+  "feature-flags.import-flag-list-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the feature flag list. Please ensure it is the correct file.",
+  "feature-flags.import-flag-list-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the feature flag list details post-import.",
   "feature-flags.upsert-flag-modal.name-hint.text": "The name for this feature flag.",
   "feature-flags.upsert-flag-modal.key-hint.text": "A unique key used to retrieve this feature flag from the client application.",
   "feature-flags.upsert-flag-modal.duplicate-key-error.text": "Feature flag with this key already exists for this app-context.",
@@ -410,6 +412,7 @@
   "feature-flags.add-feature-flag.text": "Add Feature Flag",
   "feature-flags.import-feature-flag.text": "Import Feature Flag",
   "feature-flags.import-feature-flag.message.text": "The Feature Flag JSON file should include the required properties for it to be imported",
+  "feature-flags.import-feature-flag-list.message.text": "The List JSON file should include the required properties for it to be imported",
   "feature-flags.export-all-feature-flags.text": "Export All Feature Flag Designs",
   "feature-flags.export-feature-flag-design.text": "Export Feature Flag Design",
   "feature-flags.export-feature-flags-data.text": "Email Feature Flag Data",
