addressed review comments

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -411,8 +411,8 @@
   "feature-flags.enable.text": "Enable",
   "feature-flags.add-feature-flag.text": "Add Feature Flag",
   "feature-flags.import-feature-flag.text": "Import Feature Flag",
-  "feature-flags.import-feature-flag.message.text": "The Feature Flag JSON file should include the required properties for it to be imported",
-  "feature-flags.import-feature-flag-list.message.text": "The List JSON file should include the required properties for it to be imported",
+  "feature-flags.import-feature-flag.message.text": "The Feature Flag JSON file should include the required properties for it to be imported.",
+  "feature-flags.import-feature-flag-list.message.text": "The List JSON file should include the required properties for it to be imported.",
   "feature-flags.export-all-feature-flags.text": "Export All Feature Flag Designs",
   "feature-flags.export-feature-flag-design.text": "Export Feature Flag Design",
   "feature-flags.export-feature-flags-data.text": "Email Feature Flag Data",
