export feature flag list modals, API endpoing and functionality

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -419,6 +419,8 @@
   "feature-flags.export-all-feature-flags.confirmation-text.text": "Are you sure you want to export all feature flags design (JSON)?",
   "feature-flags.export-feature-flag-design.confirmation-text.text": "Are you sure you want to export the feature flags design (JSON)?",
   "feature-flags.export-feature-flags-data.confirmation-text.text": "Are you sure you want to email the feature flags data (CSV)?",
+  "feature-flags.export-all-include-lists-design.confirmation-text.text": "Are you sure you want to export all include lists (JSON)?",
+  "feature-flags.export-all-exclude-lists-design.confirmation-text.text": "Are you sure you want to export all exclude lists (JSON)?",
   "feature-flags.upsert-list-modal.segment-placeholder.text": "Select segment",
   "feature-flags.upsert-list-modal.segment.error.message.text": "Segment must be selected from the available options.",
   "feature-flags.upsert-list-modal.values-label.text": "Values",
@@ -467,6 +469,7 @@
   "segments.import-segment.text": "IMPORT SEGMENT",
   "segments.import-segment.message.text": "Select the JSON file(s) to import segments:",
   "segments.import-segment.error.message.text": "Invalid Segment JSON data",
+  "segments.export-all-lists-design.confirmation-text.text": "Are you sure you want to export all lists (JSON)?",
   "segments.segment-experiment-list-title.text": "Used by ({{ numberOfUses }}) ",
   "segments.segment-experiment-list-name.text": "Name",
   "segments.segment-experiment-list-state.text": "Status",
