--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -238,6 +238,7 @@
   "home.view-experiment.enrollment-over-time.choose-date-range.text": "Choose a range",
   "home.view-experiment.enrollment-over-time.user-enrollments-across-sites.text": "PARTICIPANT ENROLLMENTS ACROSS SITES",
   "home.view-experiment.enrollment-over-time.group-enrollments-across-sites.text": "GROUP ENROLLMENTS ACROSS SITES",
+  "home.view-experiment.enrollment-over-time.design-type-change-validation.text": "The design details would be updated as per the updated experiment type, please review before saving.",
   "home.view-experiment.enrollments-by-decision-point.title.text": "By Decision Point",
   "home.view-experiment.enrollments-by-condition.title.text": "By Condition",
   "home.view-experiment.experiment-conditions-title.text": "Conditions",
