--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -121,6 +121,8 @@
   "home.new-experiment.overview.context.error.text": "Please enter at least one context",
   "home.new-experiment.overview.stratification-factor.error.text": "Please select stratification factor",
   "home.new-experiment.overview.no-stratification-factor.error.text": "Please import the stratification factor you require from Participants Menu > Stratification Tab",
+  "home.new-experiment.overview.context-changed.warning.text": "Changing the App Context will clear all fields in the Participants and Metrics steps. Please review before saving.",
+  "home.new-experiment.overview.design-type-changed.warning.text": "Changing the Design Type will clear all fields in the Design step. Please review before saving.",
   "home.new-experiment.design.design-type.label": "Design Type",
   "home.new-experiment.design.decision-point.initial.include-message": "Experiments require at least one decision point",
   "home.new-experiment.design.factors.initial.include-message": "Factorial experiments require factors",
