--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -182,6 +182,7 @@
   "home.new-experiment.design.condition.column-header.alias.text": "ALIAS",
   "home.new-experiment.design.condition.column-header.weight.text": "Weight(%)",
   "home.new-experiment.design.condition.column-header.include.text": "INCLUDE",
+  "home.new-experiment.design.mooclet-policy-parameters.header.text": "Mooclet Policy Parameters",
   "home.new-experiment.metrics.text": "Metrics",
   "home.new-experiment.metrics.metric.placeholder.text": "Metric",
   "home.new-experiment.metrics.key.placeholder.text": "Key",
@@ -249,6 +250,7 @@
   "home.view-experiment.experiment-payloads.column-label.target": "TARGET",
   "home.view-experiment.experiment-payloads.column-label.condition": "CONDITION",
   "home.view-experiment.experiment-payloads.column-label.payload": "PAYLOAD",
+  "home.view-experiment.experiment-mooclet-policy-parameters-title.text": "Mooclet Policy Parameters",
   "home.view-experiment.metrics-analysis-unavailable.text": "Experiment metrics analysis has been temporarily disabled in this view. This information is still available when exporting the experiment data.",
   "home.view-experiment.graph-type.text": "Type",
   "home.view-experiment.graph-conditions.text": "Conditions",
